--- a/external.html
+++ b/external.html
@@ -5,6 +5,6 @@
   <title>External</title>
 </head>
 <body>
-  <h1>Style Me in Green</h1>
+  <h1 style="color: blue;">Style Me in Blue!</h1>
 </body>
 </html>
