Update HTML title and add internal CSS styles
Updated title and added internal CSS styles. Modified header and added buttons linking to different webpages.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Adding CSS</title>
+  <title>Sami</title>
+  <style>
+    h1 {
+      text-align: center;
+    }
+  </style>
 </head>
 
+
 <body>
-  <h1>Three Methods of Adding CSS</h1>
+  <h1 style="color: orange; align: center;">Three Methods of Adding CSS</h1>
+  <hr />
   <!-- Create 3 Links to The 3 Webpages: inline, internal and external -->
+  <button><a style="color: red;" href="./inline.html"><em>Inline</em></a></button>
+  <button><a style="color: green;" href="./internal.html"><em>Internal</em></a></button>
+  <button><a style="color: blue;" href="./external.html"><em>External</em></a></button>
 </body>
 
 </html>
